# ebird2CBRO

./: .gitignore  README.md  pyproject.toml
examples/: exemplo_basico.ipynb
src/ebird2cbro/: __init__.py  api.py  cbro.py  main.py
src/ebird2cbro/data/: cbro.xlsx  taxonomic_crosswalk.csv
