[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ebird2CBRO"
version = "0.1.1"
description = "Convert eBird species lists into presence columns in the Brazilian CBRO bird checklist."
authors = [
    {name = "Carlene Gomes"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "requests",
    "openpyxl"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]